--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,18 @@
             <version>4.0.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.5.16</version>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.3.232</version>
+            <scope>runtime</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -309,6 +321,13 @@
                 </configuration>
             </plugin>
 
+
+
+
+
+
+
+
             <plugin>
                 <groupId>org.apache.cxf</groupId>
                 <artifactId>cxf-codegen-plugin</artifactId>
@@ -318,11 +337,26 @@
                         <id>generate-sources</id>
                         <phase>generate-sources</phase>
                         <configuration>
+                            <additionalJvmArgs>-Djavax.xml.accessExternalDTD=all -Djavax.xml.accessExternalSchema=all</additionalJvmArgs>
                             <sourceRoot>${project.build.directory}/generated-sources</sourceRoot>
                             <wsdlOptions>
                                 <wsdlOption>
                                     <wsdl>${project.basedir}/src/main/resources/employees.wsdl</wsdl>
+                                    <extraargs>
+                                        <extraarg>-xjc-Xfluent-api</extraarg>
+                                    </extraargs>
                                 </wsdlOption>
+<!--                                <wsdlOption>-->
+<!--                                    <wsdl>${project.basedir}/src/main/resources/SOAP.Demo.wsdl</wsdl>-->
+<!--                                    <extraargs>-->
+<!--                                        <extraarg>-xjc-Xfluent-api</extraarg>-->
+<!--                                    </extraargs>-->
+<!--                                    <bindingFiles>-->
+<!--                                        <bindingFile>-->
+<!--                                            https://www.w3.org/2001/XMLSchema.xsd-->
+<!--                                        </bindingFile>-->
+<!--                                    </bindingFiles>-->
+<!--                                </wsdlOption>-->
                             </wsdlOptions>
                         </configuration>
                         <goals>
@@ -330,6 +364,34 @@
                         </goals>
                     </execution>
                 </executions>
+                <dependencies>
+                    <!-- https://mvnrepository.com/artifact/org.jvnet.jaxb2_commons/jaxb2-fluent-api -->
+                    <dependency>
+                        <groupId>org.jvnet.jaxb2_commons</groupId>
+                        <artifactId>jaxb2-fluent-api</artifactId>
+                        <version>3.0</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.cxf.xjc-utils</groupId>
+                        <artifactId>cxf-xjc-runtime</artifactId>
+                        <version>4.0.1</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.cxf.xjcplugins</groupId>
+                        <artifactId>cxf-xjc-ts</artifactId>
+                        <version>4.0.1</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.jvnet.jaxb2_commons</groupId>
+                        <artifactId>jaxb2-value-constructor</artifactId>
+                        <version>3.0</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.apache.commons</groupId>
+                        <artifactId>commons-lang3</artifactId>
+                        <version>3.13.0</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
